--- a/sources/twig/layout.html.twig
+++ b/sources/twig/layout.html.twig
@@ -14,33 +14,18 @@
         <link href="/css/main.css" rel="stylesheet">
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.min.js"></script>
-        <script src="/js/angular/angular.js"></script>
+        <script src="/js/angular-1.0/angular.js"></script>
+        <script src="/js/controllers.js"></script>
     </head>
     <body>
         <div class="container-fluid">
             <div class="row-fluid">
-                <div class="span12">
-                    <h1>Trucs À Faire</h1>
-                    <div>
-                        {% block content %}
-                    </div>
+                <h1>TAF</h1>
+                <div class="span12" ng-app>
+                    {% block application %}
+                    {% endblock %}
                 </div>
             </div>
         </div>
-        <script>
-            $('#active_tasks').sortable({
-                handle: "i", 
-                placeholder: "ui-state-highlight",
-                forcePlaceholderSize: true,
-                stop: function(event, ui) {
-                    $.post(
-                    "/tasks/move",
-                    {
-                        taskId: ui.item.attr('id').substr(12),
-                        newRank: $(this).find('li').length - ui.item.index()
-                    });
-                }
-            });
-        </script>
     </body>
 </html>
