--- a/sources/twig/tasks.html.twig
+++ b/sources/twig/tasks.html.twig
@@ -2,32 +2,16 @@
 
 {% block title %}Your tasks{% endblock %}
 
-{% block content %}
-<ul id="active_tasks">
-{% for task in active_tasks %}
-  <li id="active_task_{{ task.id }}"><i class="icon-move"></i>{{ task.title }}</li>
-{% else %}
-  <li>No tasks found… Good job !</li>
-{% endfor %}
-</ul>
-{% endblock %}
-
-{% block suspended_tasks %}
+{% block application %}
+<div class="span8" ng-controller="getTaskLists">
+<h3>Active Tasks</h3>
 <ul>
-{% for task in suspended_tasks %}
-  <li>{{ task.title }}</li>
-{% else %}
-  <li>None</li>
-{% endfor %}
+{% raw %}
+  <li class="active_task" id="{{ task.task_id }}" ng-repeat="task in active_tasks">
+      <span><h3>{{ task.title }}</h3>Created {{ task.created_since.y }} years {{ task.created_since.m }} months {{ task.created_since.d }} days ago. Total spent time: {{ task.work_time }} s. <button class="btn btn-mini btn-primary">Open</button></span>
+      <span><img src="/images/icons/asterisk_orange.png" /></span>
+  </li>
+{% endraw %}
 </ul>
-{% endblock %}
-
-{% block finished_tasks %}
-<ul>
-{% for task in finished_tasks %}
-  <li>{{ task.title }}</li>
-{% else %}
-  <li>None</li>
-{% endfor %}
-</ul>
+</div>
 {% endblock %}
