--- a/sources/twig/tasks.html.twig
+++ b/sources/twig/tasks.html.twig
@@ -8,8 +8,8 @@
 <ul>
 {% raw %}
   <li class="active_task" id="{{ task.task_id }}" ng-repeat="task in active_tasks">
+      <span style="float: left;"><img src="/images/icons/asterisk_orange.png" />&nbsp;</span>
       <span><h3>{{ task.title }}</h3>Created {{ task.created_since.y }} years {{ task.created_since.m }} months {{ task.created_since.d }} days ago. Total spent time: {{ task.work_time }} s. <button class="btn btn-mini btn-primary">Open</button></span>
-      <span><img src="/images/icons/asterisk_orange.png" /></span>
   </li>
 {% endraw %}
 </ul>
